Improved the new class

--- a/assets/css/pc.css
+++ b/assets/css/pc.css
@@ -77,6 +77,33 @@
 
 
 /*
+	Section::: 2 Columns
+----------------------------------------------------*/
+.pc-2colsection-row{
+	margin-left:0;
+	margin-right:0;
+}
+.pc-2colsection-left,
+.pc-2colsection-right{
+	position:relative;
+	padding-left: 0;
+	padding-right: 0;
+}
+.pc-2colsection-content{
+	position:relative;
+	z-index:2 !important;	
+}
+.pc-2colsection-bg{
+    position: absolute;
+    z-index: 0;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+
+/*
 	Section::: Content 1
 ----------------------------------------------------*/
 /* Columns */
