--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1942,6 +1942,25 @@ object {
 }
 
 
+.main-navigation .menu-item-has-children > a:after{
+	content:"\f107";
+	display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+	margin-left:4px;
+}
+.main-navigation .menu-item-has-children .menu-item-has-children > a{
+	padding-right:10px;
+}
+.main-navigation .menu-item-has-children .menu-item-has-children > a:after{
+	content:"\f105";
+	float:right;
+	margin-right:-5px;
+}
+
 /*	Responsive Menu
 ---------------------------*/
 a.responsive-menu-hand{ 
@@ -2341,4 +2360,9 @@ body .wpb_content_element{
     position: fixed;
     top: 20px;
     right: 20px;	
+}
+
+
+.jet-carousel .jet-slick-dots{
+	margin:0 !important;	
 }
