--- a/assets/css/header-4.css
+++ b/assets/css/header-4.css
@@ -55,12 +55,27 @@ a.responsive-menu-hand{
 .main-navigation ul ul {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
     border-radius: 4px;
-    padding: 4px;
     box-sizing: border-box;
-    width: 208px;
+	
+	width:200px;
+	padding:0;
 }
 #header_menu li ul li:last-child{
 	border-bottom:0;
+}
+/**/
+.header_menu ul.menu li ul li{
+	border:0;
+	border-bottom:solid 1px;
+}
+.main-navigation ul ul a{
+	padding:8px 12px;
+}
+.header_menu ul.menu li ul li:last-child{
+	border-radius:0px 0px 3px 3px;
+}
+.header_menu ul.menu li ul li:first-child{
+	border-radius:3px 3px 0px 0px;
 }
 
 
